Ajustes do login
- Aumento da permissão do Cors - data.sql com mais tipos de usuários -
comandos do curl para os usuários padrões